--- a/My Portfolio/portfolio.css
+++ b/My Portfolio/portfolio.css
@@ -344,6 +344,14 @@ footer p {
   text-align: center;
   color: white;
 }
+@media (max-width: 1365px) {
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
 @media (max-width: 1200px) {
   html {
     font-size: 80%;
